Thu Nov 28 17:14:14 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* st.c (st_keys): fix not to use Qundef in st.c.

	* include/ruby/st.h: define modified prototype.

	* hash.c (rb_hash_keys): use modified st_keys().

Thu Nov 28 16:34:43 2013  Aman Gupta <ruby@tmm1.net>

	* gc.c: Expose details about last garbage collection via GC.stat.
	* gc.c (gc_stat): Add :last_collection_flags for reason/trigger/type of
	  last GC run.
	* gc.c (gc_prof_sweep_timer_stop): Record HAVE_FINALIZE GPR even
	  without GC_PROFILE_MORE_DETAIL.
	* gc.c (gc_profile_flags): Add GC::Profiler.decode_flags to make sense
	  of GC.stat[:last_collection_flags]
	* test/ruby/test_gc.rb (class TestGc): Test for above.

Thu Nov 28 16:15:47 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (rb_w32_dup2): extract from rb_cloexec_dup2() and
	  redirect_dup2().

Tue Nov 28 14:40:00 2013  Akira Matsuda  <ronnie@dio.jp>

	* lib/drb/ssl.rb:  [Doc] Fix typo

Thu Nov 28 13:56:05 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (Doxyfile): tool/file2lastrev.rb needs running with
	  BASERUBY since r43617.  [ruby-dev:47823] [Bug #9169]

Thu Nov 28 09:18:39 2013  Koichi Sasada  <ko1@atdot.net>

	* string.c (rb_fstring): fstrings should be ELTS_SHARED.
	  If we resurrect dying objects (non-marked, but not swept yet),
	  pointing shared string can be collected.
	  To avoid such issue, fstrings (recorded to fstring_table)
	  should not be ELTS_SHARED (should not have a shared string).

Thu Nov 28 01:35:08 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* st.c (st_keys): fix to use st_index_t for size of hash.

Thu Nov 28 00:36:52 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* st.c (st_keys): define st_keys(). it writes each key to buffer.

	* hash.c (rb_hash_keys): use st_keys() for performance improvement
	  if st_data_t and VALUE are compatible.

	* st.h: define macro ST_DATA_COMPATIBLE_P() to predicate whether
	  st_data_t and passed type are compatible.
